fixed padding on mobile version of home page

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .section {
 	height: 100dvh;
 	width: 100%;
-	padding-top: 6rem;
+	padding-top: 8rem;
 	text-align: center;
 }
 
@@ -12,7 +12,7 @@
 
 .home h1 {
 	font-size: 4rem;
-	padding: 0 0.5rem 2rem 0.5rem;
+	padding: 0 0.5rem 1rem 0.5rem;
 }
 
 .home h2 {
@@ -29,5 +29,5 @@
 	justify-content: center;
 	align-items: center;
 	gap: 2rem;
-	padding-top: 1.75rem;
+	padding-top: 1.25rem;
 }
