--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,7 @@
 	top: 0;
 	z-index: 100;
 	display: flex;
-	height: 6rem;
+	height: 8rem;
 	width: 100%;
 	background-color: #e9efed;
 }
