--- a/src/components/Header/MobileMenu.css
+++ b/src/components/Header/MobileMenu.css
@@ -17,7 +17,7 @@
 
 .mobile-close {
 	position: absolute;
-	top: 1.25rem;
+	top: 2.25rem;
 	right: 1rem;
 	width: 3.5rem;
 	stroke-width: 1.5px;
